--- a/frontend/src/Components/Footer/Footer.module.css
+++ b/frontend/src/Components/Footer/Footer.module.css
@@ -19,6 +19,7 @@ h5 {
     flex-direction: row;
     border-top: 1px solid rgb(197, 197, 197);
     padding: 20px;
+    margin-top: 20px;
     /* width: 100%; */
 }
 
